--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-native-web": "^0.11.4"
   },
   "devDependencies": {
-    "babel-preset-expo": "^6.0.0"
+    "babel-preset-expo": "^6.0.0",
+    "jest": "^24.9.0"
   },
   "private": true
 }
