--- a/app.json
+++ b/app.json
@@ -25,6 +25,7 @@
     ],
     "ios": {
       "supportsTablet": true
-    }
+    },
+    "description": "Simple app for calculating rpe weights on ios and android"
   }
 }
