[update] default picker styles

--- a/app.json
+++ b/app.json
@@ -26,6 +26,6 @@
     "ios": {
       "supportsTablet": true
     },
-    "description": "Simple app for calculating rpe weights on ios and android"
+    "description": "Simple app for calculating rpe weights on ios and android. "
   }
 }
