--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "devDependencies": {
     "babel-preset-expo": "^6.0.0",
-    "jest": "^24.9.0"
+    "jest": "^24.9.0",
+    "prettier": "1.18.2"
   },
   "private": true
 }
