--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
     "react-native-picker-select": "^6.3.3",
-    "react-native-web": "^0.11.4"
+    "react-native-web": "^0.11.4",
+    "prop-types": "latest"
   },
   "devDependencies": {
     "babel-preset-expo": "^6.0.0",
